Optimizations and ajustments

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
       <button class="navbar-buttons" (click)="toggleActiveMenu($event)" [routerLink]="['/portfolio']">PORTFOLIO</button>
       <button class="navbar-buttons" (click)="toggleActiveMenu($event)" [routerLink]="['/service']">SERVICE</button>
 
-      <button class="navbar-buttons" (click)="toggleActiveMenu($event)" [routerLink]="['/pages']">PAGES</button>
+      <!-- <button class="navbar-buttons" (click)="toggleActiveMenu($event)" [routerLink]="['/pages']">PAGES</button> -->
     </div>
   </div>
 
