--- a/src/app/features/feature-portfolio/components/blog-section/blog-section.component.scss
+++ b/src/app/features/feature-portfolio/components/blog-section/blog-section.component.scss
@@ -25,6 +25,7 @@
         }
 
         button {
+            cursor: pointer;
             display: flex;
             justify-content: flex-end;
             border-radius: 35px;
