--- a/src/app/features/feature-portfolio/components/hero-section/hero-section.component.html
+++ b/src/app/features/feature-portfolio/components/hero-section/hero-section.component.html
@@ -24,7 +24,7 @@
    </div>
    
    <div class="download-cv">
-     <button>
+     <button matButton>
       DOWNLOAND CV
       <mat-icon svgIcon="arrow-right"></mat-icon>
      </button>
