--- a/src/app/features/feature-portfolio/components/resume-section/resume-section.component.html
+++ b/src/app/features/feature-portfolio/components/resume-section/resume-section.component.html
@@ -15,7 +15,7 @@
       <button matButton (click)="previuosSection()">
         <mat-icon svgIcon="chevron-left"></mat-icon>
         <mat-icon svgIcon="chevron-left"></mat-icon>
-        <mat-icon svgIcon="chevron-left"></mat-icon>
+        <!-- <mat-icon svgIcon="chevron-left"></mat-icon> -->
       </button>
   
         <p>{{ sections[index] }}</p>
@@ -23,7 +23,7 @@
         <button matButton (click)="nextSection()">
           <mat-icon svgIcon="chevron-right"></mat-icon>
           <mat-icon svgIcon="chevron-right"></mat-icon>
-          <mat-icon svgIcon="chevron-right"></mat-icon>
+          <!-- <mat-icon svgIcon="chevron-right"></mat-icon> -->
         </button>
     </div>
   </div>
