--- a/src/app/features/feature-portfolio/components/resume/resume-about-me-section/resume-about-me-section.component.html
+++ b/src/app/features/feature-portfolio/components/resume/resume-about-me-section/resume-about-me-section.component.html
@@ -2,7 +2,7 @@
     <div class="resume-content">
       <div class="resume-photo-section">
          <div class="photo">
-  
+           <img src="assets/images/about-me.jpg">
          </div>
          <div class="details">
             <h1>HI, I AM VASILE BADRAGAN A SOFTWARE ENGINEER</h1>
