--- a/src/app/features/feature-portfolio/pages/contact-page/contact-page.component.scss
+++ b/src/app/features/feature-portfolio/pages/contact-page/contact-page.component.scss
@@ -93,6 +93,7 @@
         }
 
         button {
+          cursor: pointer;
           width: 230px;
           height: 51px;
           border-radius: 25px;
