--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -14,7 +14,7 @@
   &-link {
     display: flex;
     align-items: center;
-    width: 70%;
+    width: 60%;
 
     .logo {
       margin-right: 100px;
@@ -74,7 +74,7 @@
 
         nav {
           padding-top: 5px;
-          color: white;
+          color: var(--white);
 
           .dropdown-content {
             position: absolute;
@@ -170,8 +170,7 @@
       text-decoration: none;
       color: var(--white);
      }
-      //color: var(--cream-500);
-      //padding: 5px;
+
       margin-bottom: 5px;
     }
 
@@ -185,7 +184,6 @@
 
       .dropdown-content {
         position: absolute;
-        //background-color: var(--cream-100);
         color: var(--cream-500);
         box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         right: 50px;
