--- a/src/app/features/feature-portfolio/components/about/about-me-section/about-me-section.component.scss
+++ b/src/app/features/feature-portfolio/components/about/about-me-section/about-me-section.component.scss
@@ -21,15 +21,15 @@
     gap: 100px;
 
     .photo-content{
-      min-width: 320px;;
-        width: 330px;
-        height: 415px;
+        min-width: 370px;;
+        width: 450px;
+        height: 475px;
         background-color: var(--white);
 
         img{
           width: 100%;
           height: 100%;
-          object-fit: cover;
+          object-fit: fill;
         }
     }
 
@@ -54,28 +54,36 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             row-gap: 30px;
-            column-gap: 60px;
+            column-gap: 80px;
             margin-top: 40px;
 
             .domain-skill-item{
                display: flex;
-               //width: 304px;
-               height: 116px;
                background-color: var(--dark-grey-500);
-               padding: 20px;
+               padding: 40px;
 
                mat-icon{
-                height: 40px;
+                height: 50px;
                 width: 70px;
-                color: var(--cream-500);
+                color: var(--white);
                 margin-right: 30px;
                 margin-top: 10px;
                }
 
                h4{
                 font-size: 20px;
-                color: var(--cream-500);;
+                color: var(--white);;
                 line-height: 35px;
+               }
+
+               &:hover{
+                mat-icon{
+                  color: var(--cream-500);
+                 }
+  
+                 h4{
+                  color: var(--cream-500);;
+                 }
                }
             }
         }
@@ -156,7 +164,7 @@
 }
 
 
-@media screen and (min-width: 768px) and (max-width: 1048px) {
+@media screen and (min-width: 768px) and (max-width: 1110px) {
   .about-container {
   
     .content-container {
@@ -164,10 +172,16 @@
       gap: 40px;
   
    
+      .photo-content{
+        min-width: 52.5%;
+        width: 100%;
+        height: 375px;
+        background-color: var(--white);
+    }
   
       .description{
           text-align: left;
-    
+          margin-top: 30px;
   
           .domain-skill{
               display: block;
