--- a/src/app/features/feature-portfolio/components/about/partner-section/partner-section.component.scss
+++ b/src/app/features/feature-portfolio/components/about/partner-section/partner-section.component.scss
@@ -12,6 +12,7 @@
         width: 70%;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 20px;
 
         mat-icon{
             width: 200px;
