--- a/src/app/features/feature-portfolio/components/hero-section/hero-section.component.scss
+++ b/src/app/features/feature-portfolio/components/hero-section/hero-section.component.scss
@@ -64,6 +64,7 @@
       align-content: center;
 
       button {
+        cursor: pointer;
         border-radius: 35px;
         background-image: linear-gradient(
           to left,
@@ -103,7 +104,7 @@
     width: 50rem;
     height: 50rem;
     position: absolute;
-    top: 170px;
+    top: 125px;
     right: 0px;
 
     img{
@@ -184,6 +185,16 @@
       width: 30rem;
       height: 30rem;
       top: 60px;
+    }
+  }
+}
+
+@media screen and (max-width: 826px) {
+  .hero-section {
+    .description {
+      .title {
+        width: 90%;
+      }
     }
   }
 }
