--- a/src/app/features/feature-portfolio/components/resume-section/resume-section.component.scss
+++ b/src/app/features/feature-portfolio/components/resume-section/resume-section.component.scss
@@ -5,8 +5,6 @@
     align-items: center;
 
     .heading{
-
-
         h3{
             font-size: 2.6vw;
             font-weight: 400;
@@ -17,7 +15,6 @@
         h1{
             margin-top: 40px;
             font-size: 5.2vw;
-            //font-size: 64px;
             color: var(--white);
         }
 
@@ -48,11 +45,6 @@
             .focused-button{
                 color: var(--cream-500);
             }
-
-            button:nth-child(1){
-                //TODO: change colore on selected menu
-              //  color: var(--cream-500);
-            }
         }
 
         .resume-navbar-mobile{
@@ -71,7 +63,14 @@
         
               mat-icon{
                 margin-right: -15px;
-                height: 20px;
+                height: 18px;
+                fill: var(--white);
+              }
+
+              &:focus{
+                mat-icon{
+                    fill: var(--cream-500);
+                }
               }
             }
           }
