--- a/src/app/features/feature-portfolio/components/resume/resume-about-me-section/resume-about-me-section.component.scss
+++ b/src/app/features/feature-portfolio/components/resume/resume-about-me-section/resume-about-me-section.component.scss
@@ -13,7 +13,12 @@
                 height: 526px;
                 background-color: var(--white);
                 margin-left: 100px;  
-                //margin-top: 45px; 
+            
+                img{
+                    object-fit: cover;
+                    width: 100%;
+                    height: 100%;
+                }
             }
 
             .details{
@@ -52,6 +57,7 @@
                     align-content: center; 
                    
                     button{
+                        cursor: pointer;
                         border-radius: 35px;
                         outline: 1px solid var(--grey);
                         outline-offset: 3px;
@@ -88,9 +94,19 @@
         
         .resume-content{
             .resume-photo-section{
+                display: flex;
+                flex-direction: column;
+                height: auto;
+                width: auto;
+                
     
                 .photo{
-                    display: none;
+                    height: auto;
+                    width: auto;
+                    margin-left: 0px;
+                    margin-bottom: 30px;
+                    padding-bottom: 0px;
+                    background-color: transparent;
                 }
     
                 .details{
