--- a/src/app/features/feature-portfolio/components/resume/resume-skills-section/resume-skills-section.component.scss
+++ b/src/app/features/feature-portfolio/components/resume/resume-skills-section/resume-skills-section.component.scss
@@ -14,8 +14,14 @@
       p {
         font-size: 24px;
         font-weight: 400;
-        color: var(--cream-500);
+        color: var(--white);
         margin-bottom: 20px;
+      }
+
+      &:hover{
+        p{
+          color: var(--cream-500);
+        }
       }
     }
 
@@ -50,7 +56,6 @@
         p {
           font-size: 24px;
           font-weight: 400;
-          color: var(--cream-500);
           margin-bottom: 20px;
         }
       }
