--- a/src/app/features/feature-portfolio/pages/portfolio-page/portfolio-page.component.scss
+++ b/src/app/features/feature-portfolio/pages/portfolio-page/portfolio-page.component.scss
@@ -31,12 +31,11 @@
     }
 
     button:hover {
-      //TODO: change colore on selected menu
+      cursor: pointer;
       color: var(--cream-500);
     }
 
     button:focus {
-      //TODO: change colore on selected menu
       color: var(--cream-500);
     }
   }
@@ -83,15 +82,27 @@
             }
 
             button{
-                display: none;
-                width: 50px;
-                height: 50px;
-                background-color: transparent;
-                margin-top: 150px;
-                margin-left: 30px;
-                border-radius: 25px;
-                border: none;
-                outline: 1px solid white;
+              cursor: pointer;
+              transition: .3s ease;
+              opacity: 0;
+              position: absolute;
+              top: 40%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              -ms-transform: translate(-50%, -50%);
+              text-align: center;
+              border-radius: 50%;
+              background-color: transparent;
+              border: 1px solid var(--white);
+              width: 50px;
+              height: 50px;
+
+              mat-icon{
+                margin-top: 5px;
+                fill: var(--white) !important;
+                width: 20px;
+                height: 20px;
+              }
             }
         }
 
@@ -111,12 +122,23 @@
     }
 
     .work-item:hover{
+      position: relative;
+      cursor: pointer;
 
         .inner-work-item{
-            background-color: rgb(150, 149, 149);
-            button{
-                display: inline;   
+            background-color: grey;
+
+            img{
+              opacity: 0.3;
             }
+
+            button{
+              opacity: 1;
+
+              mat-icon{
+                opacity: 10;
+              }
+            }      
         }
 
         p{
@@ -202,8 +224,9 @@
       .work-item:hover{
   
           .inner-work-item{
-              background-color: rgb(150, 149, 149);
+      
               button{
+                top: 30%;
                   display: inline;   
               }
           }
