--- a/src/app/features/feature-portfolio/pages/service-page/service-page.component.html
+++ b/src/app/features/feature-portfolio/pages/service-page/service-page.component.html
@@ -15,7 +15,7 @@
     <div class="expertise-area-item">
       <div class="item-count">
         <h1>01</h1>
-        <mat-icon svgIcon="programmer-laptop">data</mat-icon>
+        <mat-icon svgIcon="programmer-laptop"></mat-icon>
       </div>
       <h1>Frontend Development</h1>
       <p>Bringing websites and applications to life through front-end development</p>
@@ -180,7 +180,7 @@
     <div class="expertise-area-item">
       <div class="item-count">
         <h1>04</h1>
-        <mat-icon svgIcon="programmer-laptop">data</mat-icon>
+        <mat-icon svgIcon="programmer-laptop"></mat-icon>
       </div>
       <h1>CI/CD</h1>
       <div class="line"></div>
