--- a/src/app/features/feature-portfolio/pages/service-page/service-page.component.scss
+++ b/src/app/features/feature-portfolio/pages/service-page/service-page.component.scss
@@ -23,7 +23,6 @@
 
     .expertise-area-item {
       background-color: var(--dark-grey-500);
-      height: 500px;
       padding: 50px 100px;
 
       .item-count {
@@ -31,31 +30,21 @@
         justify-content: space-between;
 
         h1 {
-          color: var(--cream-500);
+          color: var(--white);
           text-align: start;
           font-size: 18px;
           font-weight: 300;
         }
 
         mat-icon {
-          color: var(--cream-500);
+          color: var(--white);
           width: 50px;
           height: 50px;
         }
       }
 
-      .item-count:hover {
-        h1 {
-          color: var(--cream-500);
-        }
-
-        mat-icon {
-          color: var(--cream-500);
-        }
-      }
-
       h1 {
-        color: var(--cream-500);
+        color: var(--white);
         margin-top: 10px;
         margin-bottom: 30px;
         font-size: 24px;
@@ -98,7 +87,7 @@
         .tools {
           line-height: 40px;
           h3 {
-            color: white;
+            color: var(--white);
           }
 
           .work-process-item {
@@ -116,6 +105,36 @@
           }
         }
       }
+    }
+
+    .expertise-area-item:hover{
+      .item-count {
+        h1 {
+          color: var(--cream-500);
+        }
+
+        mat-icon {
+          color: var(--cream-500);
+        }
+      }
+
+      h1 {
+        color: var(--cream-500);
+      }
+
+      .work-process-tools-dividion {
+        .work-process {
+          h3 {
+            color: var(--cream-500);
+          }
+        } 
+
+        .tools {
+          h3 {
+            color: var(--cream-500);
+          }
+        }
+      }     
     }
 
     .expertise-area-item-photo {
@@ -158,38 +177,28 @@
           justify-content: space-between;
 
           h1 {
-            color: var(--cream-500);
+           // color: var(--cream-500);
             text-align: start;
             font-size: 18px;
             font-weight: 300;
           }
 
           mat-icon {
-            color: var(--cream-500);
+            //color: var(--cream-500);
             width: 50px;
             height: 50px;
           }
         }
 
-        .item-count:hover {
-          h1 {
-            color: var(--cream-500);
-          }
-
-          mat-icon {
-            color: var(--cream-500);
-          }
-        }
-
         h1 {
-          color: var(--cream-500);
+          //color: var(--cream-500);
           margin-top: 10px;
           margin-bottom: 30px;
           font-size: 24px;
         }
 
         p {
-          color: var(--white);
+          //color: var(--white);
           font-size: 18px;
           font-weight: 200;
           line-height: 30px;
@@ -202,10 +211,6 @@
 
           .work-process {
             line-height: 40px;
-
-            h3 {
-              color: var(--white);
-            }
 
             .work-process-item {
               display: flex;
@@ -224,10 +229,6 @@
 
           .tools {
             line-height: 40px;
-            h3 {
-              color: white;
-            }
-
             .work-process-item {
               display: flex;
               align-items: center;
@@ -253,6 +254,19 @@
           height: 100%;
           object-fit: cover;
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1200px)  {
+  .service {
+ 
+    .expertise-area {
+      display: block;
+
+      .expertise-area-item{
+        margin-top: 30px;
       }
     }
   }
