--- a/src/app/features/feature-portfolio/pages/single-portfolio-page/single-portfolio-page.component.html
+++ b/src/app/features/feature-portfolio/pages/single-portfolio-page/single-portfolio-page.component.html
@@ -1,4 +1,117 @@
-<app-page-heading 
-    [title]="'portfolio web development'" 
-    [subtitle]="'Boutique Web Design'">
+<app-page-heading [title]="'portfolio web development'" [subtitle]="'Boutique Web Design'">
 </app-page-heading>
+
+<div class="container">
+    <div class="image-container">
+        <img src="assets/images/work-3.jpg" alt="img">
+    </div>
+
+    <div class="project-details">
+        <div class="project-details-item">
+            <p>Client</p>
+            <p>Max Jason</p>
+        </div>
+
+        <div class="project-details-item">
+            <p>Category</p>
+            <p>Personal Portfolio</p>
+        </div>
+
+        <div class="project-details-item">
+            <p>Work Duration</p>
+            <p>1 Month</p>
+        </div>
+
+        <div class="project-details-item">
+            <p>Tools</p>
+            <p>Angular</p>
+        </div>
+    </div>
+
+    <div class="project-about">
+        <div class="overview">
+            <h1>Overview</h1>
+            <p>
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+                took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <div class="highlight">
+                <div class="highlight-item">
+                    <mat-icon svgIcon="radio-button-icon"></mat-icon>
+                    <p>Advantage</p>
+                </div>
+                <div class="highlight-item">
+                    <mat-icon svgIcon="radio-button-icon"></mat-icon>
+                    <p>Advantage</p>
+                </div>
+                <div class="highlight-item">
+                    <mat-icon svgIcon="radio-button-icon"></mat-icon>
+                    <p>Advantage</p>
+                </div>
+                <div class="highlight-item">
+                    <mat-icon svgIcon="radio-button-icon"></mat-icon>
+                    <p>Advantage</p>
+                </div>
+            </div>
+        </div>
+        <div class="typography">
+            <h1>Typography</h1>
+            <p>
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer
+                took a galley of type and scrambled it to make a type specimen book.
+            </p>
+            <div class="typography-inner-container">
+                <div class="typography-inner-item">
+                    <h3>Aa</h3>
+                    <p>Font Family Heading</p>
+                    <p>Kanit</p>
+                </div>
+
+                <div class="typography-inner-item">
+                    <h3>Aa</h3>
+                    <p>Font Family Paragraph</p>
+                    <p>Hind</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="conclusion">
+        <h1>Conclusion</h1>
+        <p>
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+            galley of type and scrambled it to make a type specimen book.
+        </p>
+    </div>
+
+    <div class="portfolio-related-work">
+        <h3>PORTFOLIO</h3>
+        <h2>Related Work</h2>
+
+        <div class="related-work-container">
+            <div class="related-work-item">
+                <img src="assets/images/work-1.jpg" alt="img">
+                <div class="related-work-title">
+                    <p>Business Brand Design</p>
+                    <p>Brand Identity</p>
+                </div>
+            </div>
+
+            <div class="related-work-item">
+                <img src="assets/images/work-2.jpg" alt="img">
+                <div class="related-work-title">
+                    <p>Business Brand Design</p>
+                    <p>Brand Identity</p>
+                </div>
+            </div>
+
+            <div class="related-work-item">
+                <img src="assets/images/work-4.jpg" alt="img">
+                <div class="related-work-title">
+                    <p>Business Brand Design</p>
+                    <p>Brand Identity</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
