Single page portfolio mobile responsive

--- a/src/app/features/feature-portfolio/pages/single-portfolio-page/single-portfolio-page.component.html
+++ b/src/app/features/feature-portfolio/pages/single-portfolio-page/single-portfolio-page.component.html
@@ -89,7 +89,7 @@
         <h2>Related Work</h2>
 
         <div class="related-work-container">
-            <div class="related-work-item">
+            <div class="related-work-item" (click)="onWorkItemClick(1)">
                 <img src="assets/images/work-1.jpg" alt="img">
                 <div class="related-work-title">
                     <p>Business Brand Design</p>
@@ -97,7 +97,7 @@
                 </div>
             </div>
 
-            <div class="related-work-item">
+            <div class="related-work-item" (click)="onWorkItemClick(2)">
                 <img src="assets/images/work-2.jpg" alt="img">
                 <div class="related-work-title">
                     <p>Business Brand Design</p>
@@ -105,7 +105,7 @@
                 </div>
             </div>
 
-            <div class="related-work-item">
+            <div class="related-work-item" (click)="onWorkItemClick(3)">
                 <img src="assets/images/work-4.jpg" alt="img">
                 <div class="related-work-title">
                     <p>Business Brand Design</p>
