--- a/src/app/features/feature-portfolio/components/portfolio-section/portfolio-section.component.html
+++ b/src/app/features/feature-portfolio/components/portfolio-section/portfolio-section.component.html
@@ -5,21 +5,21 @@
   <div class="work">
 
     <div class="work-row">
-      <div class="work-item">
+      <div class="work-item" (click)="onWorkItemClick(1)">
         <img src="assets/images/ecommerce.jpg"> 
         <div class="inner-work-item custom-inner-work-item">
            <h3>Electronics eCommerce</h3>
            <p>Web Development</p>
         </div>
       </div>
-      <div class="work-item">
+      <div class="work-item" (click)="onWorkItemClick(1)">
         <img src="assets/images/work-1.jpg">
         <div class="inner-work-item">
           <h3>Admin Dashboard</h3>
           <p>Web Development</p>
        </div>
       </div>
-      <div class="work-item">
+      <div class="work-item" (click)="onWorkItemClick(1)">
         <img src="assets/images/work-2.jpg">
         <div class="inner-work-item">
           <h3>Photo Gallery</h3>
@@ -30,21 +30,21 @@
 
    
     <div class="work-row">
-      <div class="work-item">
+      <div class="work-item" (click)="onWorkItemClick(1)">
         <img src="assets/images/work-3.jpg">
         <div class="inner-work-item">
           <h3>Multipurpose eCommerce</h3>
           <p>Web Development</p>
        </div>
       </div>
-      <div class="work-item">
+      <div class="work-item" (click)="onWorkItemClick(1)">
         <img src="assets/images/work-4.jpg">
         <div class="inner-work-item">
           <h3>Food Delivery App</h3>
           <p>Web Development</p>
        </div>
       </div>
-      <div class="work-item custom">
+      <div class="work-item custom" (click)="onWorkItemClick(1)">
         <img src="assets/images/work-5.jpg">
         <div class="inner-work-item custom-inner-work-item">
           <h3>Work Progress Tracker</h3>
