Add scroll to top functionality

--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -1,6 +1,7 @@
 .footer{
     background-color: var(--dark-grey-500);
     padding: 100px;
+    padding-bottom: 50px;
     font-family: var(--kanit-font-family);
     
     &-heading{
