--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -37,14 +37,14 @@
         <button mat-menu-item [routerLink]="['/portfolio']">PORTFOLIO</button>
         <button mat-menu-item [routerLink]="['/service']">SERVICE</button>
         <button mat-menu-item [routerLink]="['/contact']">CONTACT</button>
-        <button mat-menu-item [matMenuTriggerFor]="pages">PAGES</button>
+        <!-- <button mat-menu-item [matMenuTriggerFor]="pages">PAGES</button> -->
       </mat-menu>
       
-      <mat-menu #pages="matMenu">
+      <!-- <mat-menu #pages="matMenu">
         <button mat-menu-item [routerLink]="['/blog']">BLOG</button>
         <button mat-menu-item [routerLink]="['/single-blog']">SINGLE BLOG</button>
         <button mat-menu-item [routerLink]="['/single-portfolio']">SINGLE PORTFOLIO</button>
-      </mat-menu>
+      </mat-menu> -->
     </button>
 </div>
 
